--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,23 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+a {
+  text-decoration: none!important;
+}
+
+a.table-of-contents__link--active {
+  position: relative;
+}
+
+a.table-of-contents__link--active:before {
+  content: '';
+  position: absolute;
+  left: -14px;
+  top: 40%;
+  width: 0;
+  height: 0;
+  border-top: 4px solid transparent;
+  border-left: 6px solid;
+  border-bottom: 4px solid transparent;
+}
