--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -48,3 +48,11 @@ a.table-of-contents__link--active:before {
   border-left: 6px solid;
   border-bottom: 4px solid transparent;
 }
+
+#__docusaurus {
+  height: 100vh;
+}
+
+.heroBanner_src-pages-index-module {
+  height: 100%;
+}
