--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -56,3 +56,7 @@ a.table-of-contents__link--active:before {
 .heroBanner_src-pages-index-module {
   height: 100%;
 }
+
+.navbar__inner {
+  height: 44px;
+}
