--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -60,3 +60,24 @@ a.table-of-contents__link--active:before {
 .navbar__inner {
   height: 44px;
 }
+:root {
+  --ifm-code-padding-horizontal: 0.3rem;
+}
+
+.table-of-contents__left-border {
+  border: 1px solid var(--ifm-toc-border-color);
+  border-radius: 3px;
+  margin-right: 3px;
+}
+
+code {
+  color: indianred;
+}
+
+.heroBanner_src-pages-index-module {
+  /*background: rgb(15,96,255);*/
+  /*background: -moz-linear-gradient(90deg, rgba(15,96,255,1) 0%, rgba(157,230,221,1) 100%);*/
+  /*background: -webkit-linear-gradient(90deg, rgba(15,96,255,1) 0%, rgba(157,230,221,1) 100%);*/
+  /*background: linear-gradient(90deg, rgba(15,96,255,1) 0%, rgba(157,230,221,1) 100%);*/
+  /*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0f60ff",endColorstr="#9de6dd",GradientType=1);*/
+}
