--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -72,6 +72,8 @@ a.table-of-contents__link--active:before {
 .hero__title {
   margin-bottom: 0;
   font-size: 6rem;
+  letter-spacing: 15px;
+  text-transform: uppercase;
 }
 
 .heroBanner_src-pages-index-module {
