--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -46,6 +46,7 @@
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 2px;
 }
 
 /* ROOT Цвета */
