--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -219,6 +219,10 @@ a {
 
 a.table-of-contents__link--active {
   position: relative;
+
+  border: 1px solid #2e85552e;
+  padding: 0px 3px 2px;
+  border-radius: 3px;
 }
 
 a.table-of-contents__link--active:before {
