--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -274,18 +274,18 @@ a.table-of-contents__link--active:before {
 
 .navbar__brand {
   position: relative;
+  font-family: "Montserrat ExtraBold", serif !important;
 }
 
-.navbar__brand:before {
+.navbar__brand:after {
   content: 'FRAMEWORK';
   position: absolute;
   text-align: center;
   font-size: .6rem;
   bottom: -2px;
-  left: 16px;
+  left: 18px;
   color: #6BDAAA;
-  letter-spacing: .5px;
-  font-family: "Montserrat ExtraBold", serif !important;
+  letter-spacing: 1px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
